# ai-hr

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agents/: base.py  deep_profile.py  filter.py  fit_scorer.py  jd_parser.py  report_generator.py  scout.py
app/api/: deps.py
app/api/routes/: pipeline.py
app/factories/: agent_factory.py  llm_factory.py
app/models/: schemas.py
app/pipeline/: tasks.py
app/scrapers/: linkedin.py  naukri.py  twitter.py
app/utils/: pdf_generator.py
talentscout/: .dockerignore  .env.example  .gitignore
talentscout.egg-info/: SOURCES.txt
talentscout/app/: config.py
talentscout/app/agents/: base.py
talentscout/app/api/routes/: reports.py  roles.py
talentscout/app/models/: db.py
talentscout/app/pipeline/: orchestrator.py
talentscout/app/scrapers/: github.py
talentscout/talentscout.egg-info/: PKG-INFO  requires.txt
