[project]
name = "talentscout"
version = "0.1.0"
description = "AI-Powered Candidate Discovery for Early-Stage Startups"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langchain>=0.2.0",
    "langchain-google-vertexai>=1.0.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pygithub>=2.3.0",
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "celery>=5.4.0",
    "redis>=5.0.4",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "reportlab>=4.2.0",
    "python-multipart>=0.0.9",
    "tweepy>=4.14.0",
    "pypdf2>=3.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.2",
    "isort>=5.13.2",
]
